objects/npe03__Recurring_Donations_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the Recurring Donations Package</description>
    <fields>
        <fullName>npe03__Add_Campaign_to_All_Opportunites__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, all Opportunities for Recurring Donations will use the Campaign on the Recurring Donation. Otherwise, only the first Opportunity will have the Campaign.</inlineHelpText>
        <label>Add Campaign to All Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe03__DISABLE_Donations_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_Donations_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe03__DISABLE_RecurringDonations_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_RD_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe03__Enable_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Enable Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe03__Error_Email_Notifications__c</fullName>
        <description>DEPRECATED.  Replaced by the notification settings in the System Error settings panel.</description>
        <inlineHelpText>DEPRECATED.  Replaced by the notification settings in the System Error settings panel.</inlineHelpText>
        <label>DEPRECATED-Error Email Notifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe03__Last_Batch_Run__c</fullName>
        <inlineHelpText>The date and time of the last batch update of Recurring Donations.</inlineHelpText>
        <label>Last Batch Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npe03__Maximum_Donations__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>Restricts the total number of donations created for non-open-ended Recurring Donations. Default is 50.  Larger values may result in DML errors.</inlineHelpText>
        <label>Maximum Donations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Number_of_Failures__c</fullName>
        <inlineHelpText>Number of Recurring Donations unsuccessfully updated in the last batch operation.</inlineHelpText>
        <label>Number of Failures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Number_of_Successes__c</fullName>
        <inlineHelpText>Number of Recurring Donations successfully updated in the last batch run.</inlineHelpText>
        <label>Number of Successes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Open_Opportunity_Behavior__c</fullName>
        <description>Determines the behavior of any remaining open Opportunities when an open-ended Recurring Donation is moved to a closed status.</description>
        <inlineHelpText>Determines the behavior of any remaining open Opportunities when an open-ended Recurring Donation is moved to a closed status.</inlineHelpText>
        <label>Open Opportunity Behavior on RD Close</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe03__Opportunity_Forecast_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <description>Number of months worth of open Opportunities to be created when using an open-ended Recurring Donation.  Determined by the Last Payment Date field.</description>
        <inlineHelpText>Number of months from today worth of open Opportunities to be created when using open-ended Recurring Donations. WARNING: Reducing this value will result in extra Opportunities being deleted.  Increasing it will launch a batch process to add Opportunities</inlineHelpText>
        <label>Opportunity Forecast Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Record_Type__c</fullName>
        <description>Opportunity Record Type used when Recurring Donation Opportunities are created.</description>
        <inlineHelpText>Opportunity Record Type used when Recurring Donation Opportunities are created.</inlineHelpText>
        <label>Opportunity Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe03__Update_Check_Interval__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Update Check Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__DataMigrationBatchSize__c</fullName>
        <defaultValue>25</defaultValue>
        <description>The number of records to process at a time when migrating existing Recurring Donation records to the Enhanced Recurring Donations data model.</description>
        <inlineHelpText>The number of records to process at a time when migrating existing Recurring Donation records to the Enhanced Recurring Donations data model.</inlineHelpText>
        <label>Enhanced RD Data Migration Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__DisableRollupsWhenCreatingInstallments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, and if Customizable Rollups are enabled, then immediate rollup calculations are disabled when new Installment Opportunities are created for a Recurring Donation.</description>
        <inlineHelpText>When selected, and if Customizable Rollups are enabled, then immediate rollup calculations are disabled when new Installment Opportunities are created for a Recurring Donation.</inlineHelpText>
        <label>Disable CRLP When Creating Installments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__EnableAutomaticNaming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, Salesforce automatically populates the Recurring Donation Name.</description>
        <inlineHelpText>If enabled, Salesforce automatically populates the Recurring Donation Name.</inlineHelpText>
        <label>Automatic Recurring Donation Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__InstallmentOppAutoCreateOption__c</fullName>
        <description>Specifies when NPSP will create installment Opportunities for Recurring Donations. The default is Always Create Next Installment.</description>
        <inlineHelpText>Specifies when NPSP will create installment Opportunities for Recurring Donations. The default is Always Create Next Installment.</inlineHelpText>
        <label>Installment Opportunity Auto-Creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__InstallmentOppFirstCreateMode__c</fullName>
        <description>Specifies the asynchronous processing behavior NPSP will use to create the first installment Opportunity for Recurring Donations. The default is Synchronous. Other options are Asynchronous and Asynchronous_When_Bulk.</description>
        <inlineHelpText>Specifies how NPSP will create the first installment Opportunity for Recurring Donations. The default is Synchronous.</inlineHelpText>
        <label>Installment Opportunity Async Behavior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__InstallmentOppStageName__c</fullName>
        <description>The Opportunity Stage that NPSP applies to each new installment Opportunity when you create a Recurring Donation.</description>
        <inlineHelpText>The Opportunity Stage that NPSP applies to each new installment Opportunity when you create a Recurring Donation.</inlineHelpText>
        <label>Stage Name for Installment Opportunities</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__IsRecurringDonations2Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This option enables Enhanced Recurring Donations. IMPORTANT: You must enable Enhanced Recurring Donations in NPSP Settings. Enabling in Custom Settings may cause data inconsistencies.</description>
        <inlineHelpText>This option enables Enhanced Recurring Donations. IMPORTANT: You must enable Enhanced Recurring Donations in NPSP Settings. Enabling in Custom Settings may cause data inconsistencies.</inlineHelpText>
        <label>Enhanced Recurring Donations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__NextDonationDateMatchRangeDays__c</fullName>
        <defaultValue>3</defaultValue>
        <description>The number of days before or after the Next Donation Date that NPSP won&apos;t create a new installment Opportunity if the next open Opportunity&apos;s Close Date is changed. Applies only to Recurring Donations where Installment Period is Monthly.</description>
        <inlineHelpText>The number of days before or after the Next Donation Date that NPSP won&apos;t create a new installment Opportunity if the next open Opportunity&apos;s Close Date is changed. Applies only to Recurring Donations where Installment Period is Monthly.</inlineHelpText>
        <label>Next Donation Date Match Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__RecurringDonationNameFormat__c</fullName>
        <description>The format to use for Recurring Donation naming.</description>
        <inlineHelpText>The format to use for Recurring Donation naming.</inlineHelpText>
        <label>Recurring Donation Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__RecurringDonations2EnablementState__c</fullName>
        <description>Contains Enhanced Recurring Donation enablement confirmations and state.</description>
        <inlineHelpText>Contains Enhanced Recurring Donation enablement confirmations and state.</inlineHelpText>
        <label>Recurring Donations Enablement State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__RecurringDonations2MigrationState__c</fullName>
        <description>Contains latest dry run and data migration results.</description>
        <inlineHelpText>Contains latest dry run and data migration results.</inlineHelpText>
        <label>Enhanced RD Data Migration State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Recurring_Donation_Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <description>The number of records to process at a time when running the Recurring Donations batch job. The default size is 50. Reduce to a smaller number if the Recurring Donations batch job is failing due to system limits.</description>
        <inlineHelpText>The number of records to process at a time when running the Recurring Donations batch job. The default size is 50. Reduce to a smaller number if the Recurring Donations batch job is failing due to system limits.</inlineHelpText>
        <label>Recurring Donation Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__StatusMappingDeploymentId__c</fullName>
        <description>Status mapping custom metadata deployment Id</description>
        <inlineHelpText>Status mapping custom metadata deployment Id</inlineHelpText>
        <label>Status Mapping Deployment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__UseFiscalYearForRecurringDonationValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this option enables fiscal year for Recurring Donation value totals. To set the fiscal year start month, go to Setup | Company Settings | Fiscal Year. NOTE: Use Standard Fiscal Year only. Do not enable Custom Fiscal Year.</description>
        <inlineHelpText>When checked, this option enables fiscal year for Recurring Donation value totals. To set the fiscal year start month, go to Setup | Company Settings | Fiscal Year. NOTE: Use Standard Fiscal Year only. Do not enable Custom Fiscal Year.</inlineHelpText>
        <label>Use Fiscal Year for Recurring Donations</label>
        <type>Checkbox</type>
    </fields>
    <label>Recurring Donations Settings</label>
</CustomObject>